[package]
name = "candle-app"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Candle (CPU-only by default to avoid CUDA toolchain requirements)
candle-core = { version = "0.8.3" }
candle-nn = { version = "0.8.3" }
candle-datasets = "0.8.3"

# CLI
clap = { version = "4.5.31", features = ["derive"] }
anyhow = "1.0.96"
thiserror = "1.0.64"

# Async runtime + web server/client
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread", "signal"] }
axum = { version = "0.7.5", features = ["macros"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
reqwest = { version = "0.12.9", features = ["json", "rustls-tls"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
parking_lot = "0.12.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
futures = "0.3.30"
